# fin-stack-repo

./: .gitignore
deploy/: Dockerfile  Dockerfile.build  Dockerfile.build-arm64  Dockerfile.web  README-DEPLOY.md  build-arm64.sh  build-local.sh  build.sh  docker-compose.yml  setup-letsencrypt.sh  setup-ssl.sh
deploy/nginx/: nginx.conf
server/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  env.dev  env.prod
server/migrations/2024-06-20-000000_create_users/: up.sql
server/migrations/2024-06-22-000000_create_income_expenses/: down.sql  up.sql
server/nginx/: nginx.conf
server/scripts/: run-full-stack.sh
server/src/: docs.rs  main.rs
server/src/config/: errors.rs  mod.rs
server/src/controllers/: expense_controller.rs  income_controller.rs  mod.rs  user_controller.rs
server/src/database/: db_connection.rs  mod.rs
server/src/models/: decimal.rs  expense.rs  income.rs  mod.rs  schema.rs  user.rs
server/src/routes/: expense_routes.rs  income_routes.rs  mod.rs  user_routes.rs
server/src/services/: auth_service.rs  expense_service.rs  income_service.rs  mod.rs  user_service.rs
web/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package.json  pnpm-lock.yaml
web/src/: index.html
web/src/app/: app.component.ts  app.routes.ts
web/src/app/components/add-expense/: add-expense.component.html  add-expense.component.ts
web/src/app/components/users/: users.component.html  (+1 more)
web/src/app/services/: expense.service.ts  income.service.ts  user.service.ts
web/src/environments/: environment.prod.ts
(+4 files in other folders)
