[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# Diesel ORM
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8.10"